[package]
name = "rust-orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.21"
tokio = { version = "1.18.1", features = ["full"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
tungstenite = "0.17.2"
url = "2.2.2"
