[package]
name = "orderly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.12", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.21"
futures-executor = { version = "0.3.21", features = ["thread-pool"] }
log = "0.4.16"
rust_decimal = "1.23"
rust_decimal_macros = "1.23"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.1", features = ["full"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
tungstenite = "0.17.2"
url = "2.2.2"
